# automake-example

./: .gitignore  README.md
example1-c-program/: Makefile.am  configure.ac  file.xml
example1-c-program/src/: Makefile.am  main.c
