SUBDIRS = src
dist_doc_DATA = README
xmldir = $(datadir)/xml
xml_DATA = file.xml

#prefix:
# dist_
# nodist_
# nobase_
# notrans_

# require build, but not install that
#noinst_

# should not build until 'make check' command run
#check_

#primary name
# PROGRAMS
# LIBRARIES
# LTLIBRARIES
# LISP
# PYTHON
# JAVA
# SCRIPTS
# DATA
# HEADERS
# MANS
# TEXINFOS